# smolgui

./: .gitignore  CMakeLists.txt  README.md  _aspect_8h.html  _aspect_8h.js  _aspect_8h__dep__incl.map  _aspect_8h__dep__incl.md5  _aspect_8h__incl.map  _aspect_8h__incl.md5  _aspect_8h_source.html  _clipping_layers_8cpp.html  _clipping_layers_8cpp__incl.dot  _clipping_layers_8cpp__incl.map  _clipping_layers_8cpp__incl.md5  _clipping_layers_8h.html  _clipping_layers_8h.js  _clipping_layers_8h__dep__incl.dot  _clipping_layers_8h__dep__incl.map  _clipping_layers_8h__dep__incl.md5  _clipping_layers_8h__incl.dot  _clipping_layers_8h__incl.map  _clipping_layers_8h__incl.md5  _clipping_layers_8h_source.html  _constraints_8h.html  _constraints_8h.js  _constraints_8h__dep__incl.map  _constraints_8h__dep__incl.md5  _constraints_8h__incl.map  _constraints_8h__incl.md5  _constraints_8h_source.html  _counters_8cpp.html  _counters_8h.html  _counters_8h.js  _counters_8h__dep__incl.dot  _counters_8h__incl.dot  _counters_8h_source.html  _default_files_8h.html  _default_files_8h__dep__incl.map  _default_files_8h__dep__incl.md5  _default_files_8h__incl.dot  (+666 more)
.github/workflows/: doxygen.yml
contents/: atlas.json  english_demo.json  french_demo.json  layout.json  widgets.xcf
docs/: Doxyfile  Doxyfile.txt
docs/html/: _clipping_layers_8cpp.html  _clipping_layers_8h.html  _constraints_8h__dep__incl.dot  _constraints_8h__incl.dot  _counters_8cpp__incl.dot  _default_files_8h.js  _default_files_8h__dep__incl.dot  _draw_options_8h__incl.dot  _draw_options_8h_source.html  _formula_8h.html  _formula_8h.js  _formula_8h__incl.dot  _gui_8h__dep__incl.dot  _gui_8h__incl.dot  _gui_8tpp_source.html  _gui_group_8h.html  _gui_group_8h__incl.dot  _gui_render_8h__dep__incl.dot  _gui_render_8h_source.html  _gui_states_8h__dep__incl.dot  _gui_states_8h__incl.dot  _icons_font_awesome7_8h.js  _icons_font_awesome7_8h__dep__incl.dot  _icons_font_awesome7_8h_source.html  _interpolation_8h.html  _interpolation_8h__dep__incl.dot  _interpolation_8h_source.html  _interpolation_8tpp.html  _interpolation_8tpp__dep__incl.dot  _interpolation_8tpp_source.html  _item_states_8h.js  _item_states_8h__dep__incl.dot  _layout_8cpp__incl.dot  _layout_8h.html  _layout_8h.js  _layout_8h__dep__incl.dot  _layout_8h_source.html  _layout_8tpp__dep__incl.dot  _layout_8tpp_source.html  _load_json_8h.js  (+227 more)
docs/html/search/: all_12.js  all_13.js  all_6.js  all_c.js  all_e.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  defines_1.js  enums_0.js  enums_1.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_15.js  enumvalues_2.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_a.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  files_1.js  (+41 more)
examples/: CMakeLists.txt  atlas_collage.json  minimalDemo.cpp  serializationDemo.cpp  smolguiDemo.cpp  testTexture.cpp  textureCollageDemo.cpp
examples/assets/: atlas_collage.json  english_demo.json  french_demo.json  layout.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_2.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_12.js  enumvalues_13.js  enumvalues_14.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_9.js  enumvalues_b.js  (+30 more)
src/: CMakeLists.txt  main.cpp  serializationDemo.cpp  smolguiDemo.cpp  testTexture.cpp
src/core/: CMakeLists.txt  Interpolation.h  Interpolation.tpp  LookupTable.h  ObjectPool.h  Polygon.tpp  Shapes.tpp
src/gui/: CMakeLists.txt  Gui.cpp  Gui.h  ScrollerInformation.cpp  Style.cpp  Style.h  UserInterface.cpp  UserInterface.h  sgui.h
src/parser/: CMakeLists.txt  Formula.h  MathParser.h
src/render/: CMakeLists.txt  GuiRender.cpp  GuiRender.h  MeshFunctions.cpp  MeshFunctions.h  Plotter.cpp  Plotter.h  PrimitiveShapeRender.cpp  PrimitiveShapeRender.h  TextureMeshes.cpp  TextureMeshes.h
src/resources/: CMakeLists.txt  Layout.h  LoadLayout.cpp  LoadLookupTable.h  LoadTextureAtlas.cpp  LoadTextureAtlas.h  TextContainer.cpp  TextContainer.h  TextureAtlas.cpp  TextureAtlas.h
src/serialization/: CMakeLists.txt  LoadJson.h  SerializeCore.h  SerializeGUI.cpp  SerializeGUI.h  SerializeSFML.h
src/sgui/: CMakeLists.txt  DefaultFiles.h  Gui.cpp  Gui.h  Gui.tpp  sgui.h
src/sgui/Core/: CMakeLists.txt  Interpolation.h  Interpolation.tpp  LookupTable.h  LookupTable.tpp  ObjectPool.h  ObjectPool.tpp  Polygon.h  Polygon.tpp  Shapes.h  Shapes.tpp
src/sgui/Internals/: CMakeLists.txt  Counters.cpp  Counters.h  GuiGroup.h  GuiStates.h  ItemStates.h  ScrollerInformation.cpp  ScrollerInformation.h
src/sgui/Parser/: CMakeLists.txt  Formula.h  MathParser.cpp  MathParser.tpp
src/sgui/Render/: CMakeLists.txt  ClippingLayers.cpp  ClippingLayers.h  DrawOptions.h  GuiRender.cpp  GuiRender.h  GuiRender.tpp  MeshFunctions.cpp  MeshFunctions.h  Plotter.cpp  Plotter.h  PrimitiveShapeRender.cpp  PrimitiveShapeRender.h  PrimitiveShapeRender.tpp  TextureMeshes.cpp  TextureMeshes.h
src/sgui/Resources/: CMakeLists.txt  Layout.cpp  Layout.h  Layout.tpp  LoadLayout.cpp  LoadLayout.h  LoadLookupTable.h  LoadLookupTable.tpp  LoadTextureAtlas.cpp  LoadTextureAtlas.h  ResourcesHolder.h  ResourcesHolder.tpp  SoundPlayer.cpp  SoundPlayer.h  TextContainer.cpp  TextContainer.h  TextureAtlas.cpp  TextureAtlas.h  TextureCollage.cpp  TextureCollage.h
src/sgui/Serialization/: CMakeLists.txt  LoadJson.cpp  LoadJson.h  LoadLayout.cpp  LoadLayout.h  LoadLookupTable.h  LoadTextureAtlas.cpp  LoadTextureAtlas.h  Macro.h  SerializeCore.h  SerializeGUI.cpp  SerializeGUI.h  SerializeSFML.cpp  SerializeSFML.h
src/sgui/Widgets/: Aspect.h  CMakeLists.txt  Constraints.h  Internals.h  ItemStates.h  Options.h  Panel.cpp  Panel.h  Render.h  ScrollerInformation.cpp  ScrollerInformation.h  Style.h  Widgets.h
